Updated_dashboard:-activity_main_profile.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/welcomeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome,"
+            android:text="@string/welcome"
             android:textColor="@color/onSurface_47"
             android:textSize="36sp"
             android:textStyle="bold"
@@ -29,7 +29,7 @@
             android:id="@+id/hireMeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hire Us System..."
+            android:text="@string/hire_us_system"
             android:textColor="@color/primary_47"
             android:textSize="28sp"
             android:textStyle="italic"
@@ -65,7 +65,7 @@
                     android:id="@+id/findJobText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Find a Job"
+                    android:text="@string/find_a_job"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/onSurface_47"
@@ -82,7 +82,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/job_find"
-                    android:contentDescription="Find Job"
+                    android:contentDescription="@string/find_job"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -116,7 +116,7 @@
                     android:id="@+id/giveJobText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Give a Job"
+                    android:text="@string/give_a_job"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/onSurface_47"
@@ -133,7 +133,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/job"
-                    android:contentDescription="Give Job"
+                    android:contentDescription="@string/give_job"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -167,7 +167,7 @@
                     android:id="@+id/chatText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Chat with Admin"
+                    android:text="@string/chat_with_admin"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/onSurface_47"
@@ -184,7 +184,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/ic_chat"
-                    android:contentDescription="Chat"
+                    android:contentDescription="@string/chat"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
