--- a/app/src/main/res/drawable/bg_input.xml
+++ b/app/src/main/res/drawable/bg_input.xml
@@ -1,6 +1,38 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white" />
-    <corners android:radius="12dp" />
-    <stroke android:width="1dp" android:color="#CCCCCC" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Disabled -->
+    <item android:state_enabled="false">
+        <shape>
+            <solid android:color="@color/surface_47" />
+            <stroke android:width="1dp" android:color="@color/outline_47" />
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+
+    <!-- Focused -->
+    <item android:state_focused="true">
+        <shape>
+            <solid android:color="@color/surface_47" />
+            <stroke android:width="2dp" android:color="@color/primary_47" />
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+
+    <!-- Pressed -->
+    <item android:state_pressed="true">
+        <shape>
+            <solid android:color="@color/surface_47" />
+            <stroke android:width="1dp" android:color="@color/primary_hover_47" />
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+
+    <!-- Default -->
+    <item>
+        <shape>
+            <solid android:color="@color/surface_47" />
+            <stroke android:width="1dp" android:color="@color/outline_47" />
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+</selector>
